<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Splash" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/first"
        android:textColor="#000000"
        android:textSize="58sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editB"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:hint="@string/hint2" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editC"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editB"
        android:layout_alignBottom="@+id/editB"
        android:layout_marginLeft="100dp"
        android:layout_toRightOf="@+id/editB"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint3" />

    <EditText
        android:id="@+id/editA"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editB"
        android:layout_alignBottom="@+id/editB"
        android:layout_marginRight="60dp"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:text="@string/get" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="124dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
